2001-11-07  Elena Zannoni  <ezannoni@redhat.com>

	* dbxread.c (set_namestring): New function, replacing the
	SET_NAMESTRING macro.
	(SET_NAMESTRING, CUR_SYMBOL_TYPE, CUR_SYMBOL_VALUE,
	CUR_SYMBOL_STRX, DBXREAD_ONLY, START_PSYMTAB, END_PSYMTAB): Delete
	definitions.
	(read_dbx_symtab): Don't include partial-stab.h any more. Don't
	reuse code in partial-stab.h, include the code directly, instead.

        * Makefile.in (dbxread.o): Remove dependency on partial-stab.h.
	(HFILES_NO_SRCDIR): Remove partial-stab.h.

	* partial-stab.h: Remove file.
	
2001-11-07  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.sh: For multi-arch functions, check there is a
	predefault and use it as the static default.
	* gdbarch.c: Re-generate.

2001-11-08  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/tm-linux.h (I386_LINUX_ORIG_EAX_REGNUM): Define in
	terms of NUM_GREGS, NUM_FREGS and NUM_SSE_REGS instead of
	hardcoding the register number.

2001-11-07  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.sh (USE_STRUCT_CONVENTION): Default to
	generic_use_struct_convention.
	* gdbarch.h, gdbarch.c: Regenerate.
	* values.c (USE_STRUCT_CONVENTION): Delete definition, moved to
	gdbarch.h.

2001-11-06  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.sh (PC_IN_CALL_DUMMY): Require a value.
	* gdbarch.c: Regenerate.

2001-11-06  Fred Fish  <fnf@redhat.com>

	* complaints.c (info_verbose): Remove unneeded decl, is in defs.h.
	* dbxread.c: Ditto
	* dwarf2read.c: Ditto.
	* dwarfread.c: Ditto.
	* exec.c: Ditto.
	* hpread.c: Ditto.
	* hpread.h: Ditto.
	* mdebugread.c: Ditto.
	* os9kread.c: Ditto.
	* stack.c: Ditto.
	* symfile.c: Ditto.
	* tracepoint.c: Ditto.

2001-11-06  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS: Update Andrew Cagney's responsibilities.  Mention
	David Taylor and Nick Duffek in past maintainers.
	
2001-11-06  Elena Zannoni  <ezannoni@redhat.com>

        * mdebugread.c (CUR_SYMBOL_TYPE, CUR_SYMBOL_VALUE, START_PSYMTAB,